kube/services/netpolicy/fenceshib_netpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: networkpolicy-fenceshib
spec:
  podSelector:
    matchLabels:
      app: fenceshib
  ingress:
    - from:
      - podSelector:
          matchLabels:
            app: fenceshib
      - podSelector:
          matchLabels:
             app: indexd
      - podSelector:
          matchLabels:
             app: peregrine
      - podSelector:
          matchLabels:
             app: sheepdog
      - podSelector:
          matchLabels:
             app: revproxy
      - podSelector:
          matchLabels:
             app: arborist
      ports:
         - port: 80
         - port: 443
  egress:
    - to:
      - podSelector:
          matchLabels:
            app: fence
      - podSelector:
          matchLabels:
            app: indexd
      - ipBlock:
           cidr: GEN3_FENCE_DBIP/32
      - ipBlock:
           cidr: 0.0.0.0/0
  policyTypes:
   - Ingress
   - Egress
